# bible_search_engine

./: CODE_OF_CONDUCT.md  LICENSE  README.md  basic_bible_statistics.ipynb  pyproject.toml  query_results.ipynb
.github/workflows/: python-publish.yml
bible_basic_statistics/: chapter_statistics.csv
rankers/: results.csv
src/: basic_bible_statistics.ipynb  evaluate_trained_ranker.ipynb  query_results.ipynb
src/bible_basic_statistics/: chapter_statistics.csv
src/bible_search_engine/: __init__.py  document_preprocessor.py  indexing.py  initial_params_niv.json  initial_ranker.pkl  l2r.py  pipeline.py  preprocess_bible_data.py  ranker.py  relevance.py
src/bible_search_engine/.ipynb_checkpoints/: evaluate_rankers-checkpoint.ipynb  evaluate_trained_ranker-checkpoint.ipynb
src/bible_search_engine/bible_data/: chapterids_niv.json  encoded_chapters.npy  new_testament.jsonl  new_testament_niv.jsonl  old_testament.jsonl  old_testament_niv.jsonl
src/bible_search_engine/bible_index/: chapter_metadata.jsonl  chapter_vocab.jsonl  index.jsonl  statistics.json  term_metadata.jsonl
src/bible_search_engine/bible_index_niv/: chapter_metadata.jsonl  chapter_vocab.jsonl  index.jsonl  statistics.json  term_metadata.jsonl
src/bible_search_engine/bible_queries_relevances/: README.md  get_train_test_queries.py  predict_relevance.py  query1.csv  query10.csv  query10_pred.csv  query11.csv  query11_pred.csv  query12.csv  query12_pred.csv  query13.csv  query13_pred.csv  query14.csv  query14_pred.csv  query15.csv  query15_pred.csv  query16.csv  query16_pred.csv  query17.csv  query17_pred.csv  query18.csv  query18_pred.csv  query19.csv  query19_pred.csv  query1_pred.csv  query2.csv  query20.csv  query20_pred.csv  query2_pred.csv  query3.csv  query3_pred.csv  query4.csv  query4_pred.csv  query5.csv  query5_pred.csv  query6.csv  query6_pred.csv  query7.csv  query7_pred.csv  query8.csv  (+5 more)
src/bible_search_engine/components/: get_bible_data.py  indexing.py  l2r.py  preprocess.py  ranker.py  relevance.py
src/bible_search_engine/kjv-text-files/: Exodus.txt  Philemon.txt
src/rankers/: results.csv
