[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
bible_search_engine = [
    "bible_data/*.*",
    "bible_index_*/*.*",
    "initial_ranker_*.pkl",
]

[project]
name = "bible_search_engine"
version = "0.0.3"
authors = [
  { name="Ronen H", email="ronenhuang24@gmail.com" },
]
description = "Bible search engine incorporating natural language processing, deep learning, and machine learning."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "transformers",
    "datasets",
    "orjson",
    "scikit-learn",
    "numpy",
    "torch",
    "torchvision",
    "requests",
    "beautifulsoup4",
    "tqdm",
    "lightgbm",
    "optuna",
    "scipy",
    "spacy",
    "sentence-transformers",
    "fastembed",
    "qdrant-client",
    "joblib",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/ronenh24/bible_search_engine"
Issues = "https://github.com/ronenh24/bible_search_engine/issues"
